--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 
 /* Style for the scrollbar */
 ::-webkit-scrollbar {
-  width: 8px; /* Adjust the width of the scrollbar */
+  width: 0.1px; 
 }
 
 ::-webkit-scrollbar-track {
